--- a/readme
+++ b/readme
@@ -1,1 +1,5 @@
 hi this is men say hello
+
+we staat with Html create a cament layout for 2 players 
+button to start the game and one to rest the game 
+
